macro (setup_test test_name test_file)
  add_executable (${test_name} ${test_file})
  target_include_directories (${test_name} PRIVATE ${include_dir})
  target_link_libraries (${test_name} brick_ast gtest_main)
  add_test (${test_name} ${TEST_RUNTIME_OUTPUT_DIRECTORY}/${test_name})
endmacro ()

setup_test (MCTS_tests MCTS.cc)
setup_test (search_node_tests search_node.cc)
setup_test (action_factory_tests action_factory.cc)
setup_test (lambda_lib_tests lambda_lib.cc)
setup_test (random_leaf_picker_tests random_leaf_picker.cc)
setup_test (recursive_heuristic_child_picker_tests recursive_heuristic_child_picker.cc)
setup_test (recursive_random_child_picker_tests recursive_random_child_picker.cc)
setup_test (simulator_tests simulator.cc)
setup_test (util_tests util.cc) 
